feat: 🎸 Added routes page for drivers
