# src/types/routes/Route.ts
@@ -1,0 +1,10 @@
+export default interface IRoute {
+  id: string;
+  date: string;
+  complete: boolean;
+  route: string;
+  transport: string;
+  driver: string;
+  responsible: string;
+  departure: string;
+}
